add initial settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+# common settings
+# for IDEs
+.idea/
+.vscode/
+
+# for next-app
 # dependencies
 /node_modules
 /.pnp
