--- a/kokokara-snap/package.json
+++ b/kokokara-snap/package.json
@@ -17,6 +17,7 @@
     "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
