--- a/kokokara-snap/package.json
+++ b/kokokara-snap/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "mapbox-gl": "^3.6.0",
