--- a/kokokara-snap/package.json
+++ b/kokokara-snap/package.json
@@ -18,6 +18,7 @@
     "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.26.1"
   },
