--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "mapbox-gl": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
