--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "20.16.1",
